correciones estudio de titulos y cambio en .gitignore
-uso del terreno

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Archivos de configuracion
 application/config/database.php
 application/config/config.php
+# Archivos
+files/*
 # Archivos de mysql workbench
 *.mwb
 #----------------------------
