Fotos nuevas validaciones
-  ahora solo deja subir fotos horizontales
-  asigna un orden antes de enviar

--- a/.jshintrc
+++ b/.jshintrc
@@ -8,6 +8,10 @@
   "globals": {
     "jQuery": true,
 		"$": false,
-		"console": false
+		"console": false,
+		"window" : true,
+		"document": true,
+		"Image": true,
+		"alert": true
   }
 }
